update monster page

--- a/apps/web/static/css/reset.css
+++ b/apps/web/static/css/reset.css
@@ -118,6 +118,10 @@ q:after {
   content: '';
   content: none;
 }
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
